# raman-fitting

./: .build.info  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  __init__.py  _setup.py  build.info  fit_models.py  fitting_multi.py  main_run_fit_V2.py  plotting.py  post_process.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  spectrum_analyzer.py  todos.md  tox.ini
.github/workflows/: build-test-codecov.yml  github-actions-demo.yml  python-package.yml  test-release-candidate.yaml  tox_actions.yml  upload-to-testpypi.yml
examples/: DW38C_pos1.txt
raman-fitting/: __init__.py  fit_models.py
raman_fitting/: MANIFEST.in  __init__.py  indexer.py  main_run_fit.py  plotting.py  requirements.txt
raman_fitting/config/: config.py  logging_config.py
raman_fitting/datafiles/: DW38C_pos2.txt  DW38C_pos3.txt
raman_fitting/deconvolution_models/: base_model.py  base_peak.py  first_order_peaks.py  fit_models.py  model_validation.py  second_order_peaks.py
raman_fitting/export/: exporter.py  plotting.py
raman_fitting/indexer/: __init__  indexer.py
raman_fitting/processing/: __init__.py  _post_process.py  _spectrum_analyzer.py  cleaner.py  prepare_mean_spectrum.py  slicer.py  spectrum_constructor.py  spectrum_template.py
raman_fitting/results/: index.csv
raman_fitting/results/DW/: DW_FitParameters_Model_1st_2peaks+Si.xlsx  DW_FitParameters_Model_1st_2peaks.xlsx  DW_FitParameters_Model_1st_3peaks+Si.xlsx  DW_FitParameters_Model_1st_3peaks.xlsx  DW_FitParameters_Model_1st_4peaks+Si.xlsx  DW_FitParameters_Model_1st_4peaks.xlsx  DW_FitParameters_Model_1st_5peaks+Si.xlsx  DW_FitParameters_Model_1st_5peaks.xlsx  DW_FitParameters_Model_1st_6peaks+Si.xlsx  DW_FitParameters_Model_1st_6peaks.xlsx  DW_FitParameters_Model_2ndOrder_4peaks.xlsx  DW_FitParameters_Model_2nd_4peaks.xlsx  DW_FitParameters_Model_4peaks.xlsx  DW_FitParameters_Model_5peaks.xlsx  DW_FitParameters_Model_6peaks.xlsx  DW_index.xlsx
raman_fitting/results/DW/Fitting_Components/: Extra_2ndOrder_4peaks_DW38C.xlsx  Extra_4peaks_DW38C.xlsx  Extra_5peaks_DW38C.xlsx  Extra_6peaks_DW38C.xlsx  Model_1st_2peaks+Si_DW38C.xlsx  Model_1st_2peaks_DW38C.xlsx  Model_1st_3peaks+Si_DW38C.xlsx  Model_1st_3peaks_DW38C.xlsx  Model_1st_4peaks+Si_DW38C.xlsx  Model_1st_4peaks_DW38C.xlsx  Model_1st_5peaks+Si_DW38C.xlsx  Model_1st_5peaks_DW38C.xlsx  Model_1st_6peaks+Si_DW38C.xlsx  Model_1st_6peaks_DW38C.xlsx  Model_2ndOrder_4peaks_DW38C.xlsx  Model_2nd_4peaks_DW38C.xlsx  Model_4peaks_DW38C.xlsx  Model_5peaks_DW38C.xlsx  Model_6peaks_DW38C.xlsx
src/raman_fitting/: MANIFEST.in  __init__.py  api.py  main_run_fit.py  make_examples.py  types.py  version.py
src/raman_fitting/cli/: __init__.py  cli.py
src/raman_fitting/config/: __init__.py  base_settings.py  config.py  constants.py  filepath_helper.py  filepath_settings.py  filepaths.py  logging_config.py  path_settings.py  settings.py
src/raman_fitting/datafiles/: __init__.py
src/raman_fitting/deconvolution_models/: base_model.py  base_peak.py  base_peak.py.bak  first_order_peaks.py  fit_models.py  init_models.py  lmfit.py  lmfit_models.py  lmfit_parameter.py  model_config.py  model_validation.py  normalization_peaks.py  peak_validation.py  prepare_parameters.py  second_order_peaks.py
src/raman_fitting/delegating/: __init__.py  main_delegator.py  models.py  pre_processing.py  run_fit_multi.py  run_fit_spectrum.py
src/raman_fitting/delegator/: main_delegator.py
src/raman_fitting/docker/: run_make_examples.py
src/raman_fitting/example_fixtures/: Si_spectrum01.txt  __init__.py
src/raman_fitting/export/: database.py  exporter.py  plotting.py
src/raman_fitting/exporting/: database.py  exporter.py  plotting.py
src/raman_fitting/exports/: exporter.py  file_table.py  plot_formatting.py  plotting.py  plotting_fit_results.py  plotting_raw_data.py
src/raman_fitting/imports/: collector.py  file_parsers.py  filedata_parser.py  filename_parser_collector.py  filename_parser_helpers.py  indexer.py  models.py  spectrumdata_parser.py  validators.py
src/raman_fitting/indexer/: _parser.py  filedata_parser.py  filename_parser.py  indexer.py
src/raman_fitting/indexing/: _dev_db.py  file_parsers.py  filedata_parser.py  filename_parser.py  filename_parser_collector.py  filename_parser_helpers.py  indexer.py  validators.py
src/raman_fitting/interfaces/: __init__.py  argparse_cli.py  cli.py  typer_cli.py  utils.py
src/raman_fitting/models/: fit_models.py  spectrum.py  splitter.py
src/raman_fitting/processing/: __init__.py  _post_process.py.bak  _prepare_mean_spectrum.py  _slicer.py  _slicer.py.bak  _spectrum_analyzer.py.bak  _todo_redef_spectra.py  baseline_subtraction.py  cleaner.py  despike.py  despiker.py  filter.py  normalization.py  parser.py  post_processing.py  spectra.py  spectrum_constructor.py  spectrum_template.py  splitter.py
src/raman_fitting/test_fixtures/: raman_fitting.toml  testDW38C_pos4.txt
src/raman_fitting/utils/: _dev_sqlite_db.py  _todo_fitting_multi.py  _todo_sqlite_db.py  _todo_sqlite_db_pragmas.py  coordinators.py  decorators.py  exceptions.py  file_reader.py  fitting_multi.py  string_operations.py
tests/: __init__.py  conftest.py  empty.toml  test_sample.py
tests/deconvolution_models/: __init__.py  _test_metaclasses.py  test_base_model.py  test_base_peaks.py  test_fit_models.py  test_model_validation.py  test_peak_validation.py  test_peaks.py
tests/delegating/: test_main_delegator.py
tests/delegator/: test_main_delegator.py
tests/export/: __init__.py  test_plotting.py
tests/exporting/: test_plotting.py
tests/indexer/: test_filename_parser.py  test_indexer.py
tests/indexing/: test_filename_parser.py  test_filename_parser_collector.py  test_filename_parser_helpers.py  test_indexer.py
tests/models/: test_base_peak.py  test_calculate_params.py  test_fit_models.py
tests/processing/: __init__.py  test_cleaner.py  test_prepare_mean_spectrum.py  test_spectrum_constructor.py
tests/test_data/: errTS2_pos1.txt
tests/utils/: _dev_sqlite.py  test_coordinators.py
(+60 files in other folders)
