[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "raman_fitting"
license = {file = "LICENSE"}
authors = [
  {name = "David Wallace", email = "mypydavid@proton.me"},
]
description = "Python framework for the batch processing and deconvolution of raman spectra."
readme = {file = "README.md", content-type = "text/markdown"}
long_description = {file = "README.md", content-type = "text/markdown"}
keywords = ["spectroscopy", "Raman", "fitting", "deconvolution", "batch processing", "carbonaceous materials"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Physics",
	"Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = ["version", "long_description"]

[project.urls]
homepage = "https://pypi.org/project/raman-fitting/"
repository = "https://github.com/MyPyDavid/raman-fitting.git"
# documentation = "https://raman-fitting.readthedocs.io/en/latest/"

[project.scripts]
raman-fitting = "raman_fitting.interfaces:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/raman_fitting/_version.py"
template = '''
# This file is generated by hatch
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/profiling"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# testing
[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "-ra -q",
    "--cov",
    "--cov-report term-missing html xml annotate",
]
testpaths = [
    "tests",
]
