
[options]
python_requires = >=3.7.0
include_package_data = True
package_dir =
	= src
packages = find:
# setup_requires = setuptools_scm
tests_require =
	pytest
	pytest-cov
	coverage[toml]
	nose
install_requires =
	pandas >= 1.0.0
	scipy >= 1.5.2
	lmfit >= 1.0.0
	matplotlib >= 3.1.2
	numpy >= 1.19.2
	openpyxl >= 3.0.1

[options.package_data]
* = *.txt

[options.packages.find]
where = src
exclude =
	build*
	dist*
	docs*
	tests*
	*.tests
	tools*


[options.extras_require]
testing =
	pytest
	pytest-cov
	pytest-flake8
	mock
	wheel
dev =
	isort
	pylint
	flake8
	autopep8
	pydocstyle
	black
	bump2version

[check-manifest]
ignore =
	.github
	.github/*




[pylint]
extension-pkg-whitelist = numpy, pandas, matplotlib, lmfit

[flake8]
ignore =
	E402,
	W503,
	W504,
	E126
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[pydocstyle]
convention = numpy
match-dir = 'src\/.*'

[yapf]
based_on_style = pep8
dedent_closing_brackets = true
coalesce_brackets = true
split_complex_comprehension = true
split_before_dot = true

[tool:isort]
force_single_line = False
profile = black
src_paths = ["src", "test"]
line_length = 140
known_first_party = raman_fitting
default_section = THIRDPARTY
forced_separate = test_raman_fitting
skip = .tox,.eggs,ci/templates,build,dist
